# shock-relay

./: .gitignore  .gitleaks-baseline.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LESSONSLEARNED.md  README.md  REFS-PUBLIC.md  SECURITY.md  offline_queue.py  pyproject.toml
.github/workflows/: ci.yml
config/: auto-pass.example.ini  downstream-repos.toml
config/tachometer/: profile.toml
docs/: contributor-architecture-blueprint.md
docs/diagrams/: python-classes.puml  python-packages.puml  repo-architecture.drawio  repo-architecture.puml  shell-call-graph.puml  tooling-integrations.puml
scripts/: drain_queue.py  nm-dispatcher-shock-relay
services/gmail-imap/: check_inbox.py  common.py  config.example.yaml  digest_queue.py  queue_digest.py  send_digest.py  send_email.py  test_connection.py
services/signal-cli/: common.py  config.example.yaml  receive_messages.py  receive_messages.sh  send_message.py  send_message.sh  test_send_receive_confirm.py  test_send_receive_confirm.sh
services/telegram/: common.py  common.sh  config.example.yaml  receive_messages.py  receive_messages.sh  send_message.py  send_message.sh  test_send_receive_confirm.py  test_send_receive_confirm.sh
services/twilio/: common.py  common.sh  config.example.yaml  receive_messages.py  receive_messages.sh  send_sms.py  send_sms.sh  test_send_receive_confirm.py  test_send_receive_confirm.sh
services/whatsapp/: common.py  common.sh  send_message.py  (+6 more)
tests/: test_auto_pass_resolution.py  test_gmail_digest.py  test_gmail_headers.py  test_signal_metadata.py
